--- a/Family Heirloom/Assembly-CSharp.csproj
+++ b/Family Heirloom/Assembly-CSharp.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Assets\Scripts\Classes\NodeClass.cs" />
     <Compile Include="Assets\Scripts\Compass.cs" />
     <Compile Include="Assets\Scripts\Heap.cs" />
+    <Compile Include="Assets\Scripts\HitBehaviour.cs" />
     <Compile Include="Assets\Scripts\InfectionLevel.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
     <Compile Include="Assets\Scripts\mose_look_christos.cs" />
